# checkmate

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  serverless.yml
.github/workflows/: ci.yml  coverage.yml
Checkmate/: bruno.json
Checkmate/Auth/: Create User.bru  Delete User.bru  Login.bru
Checkmate/Matchmaking/: Join Queue.bru  Leave Queue.bru  folder.bru
Checkmate/environments/: Dev.bru  Localhost.bru
backend/: Cargo.toml  package-lock.json  package.json  serverless.yml
backend/crates/api/: Cargo.toml
backend/crates/api/src/: lib.rs  main.rs
backend/crates/api/src/auth/: mod.rs
backend/crates/api/src/handlers/: mod.rs  users.rs
backend/crates/create_user/: Cargo.toml
backend/crates/create_user/src/: main.rs
backend/crates/matchmaker/: Cargo.toml
backend/crates/matchmaker/src/: game.rs  lib.rs  main.rs  matching.rs  models.rs  notifications.rs
backend/crates/shared/: Cargo.toml
backend/crates/shared/src/: lib.rs
backend/crates/shared/src/auth/: mod.rs
backend/crates/shared/src/models/: game.rs  user.rs
backend/crates/websocket_api/: Cargo.toml
backend/crates/websocket_api/src/: connections.rs  handlers.rs  lib.rs  main.rs  models.rs  queue.rs
backend/crates/websocket_authorizer/: Cargo.toml
backend/crates/websocket_authorizer/src/: auth.rs  main.rs  models.rs
backend/tests/: .env.example  Cargo.toml
backend/tests/e2e/: cognito_auth.rs  health_e2e.rs  matchmaking_e2e.rs  mod.rs  users_e2e.rs  websocket_e2e.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs  main.rs
crates/api/src/handlers/: health.rs  mod.rs  users.rs
crates/create_user/: Cargo.toml
crates/create_user/src/: main.rs
crates/shared/src/: lib.rs
crates/shared/src/models/: user.rs
frontend/: next.config.ts  package-lock.json  package.json  serverless.yml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/play/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: ChessBoard.tsx  ThemeToggle.tsx
frontend/src/config/: amplify.ts  aws.ts
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: store.ts
frontend/src/services/: api.ts
frontend/src/types/: user.ts
src/: main.rs
src/middleware/: auth.rs
src/models/: mod.rs
src/models/auth/: requests.rs  responses.rs
src/models/matchmaking/: mod.rs
src/models/user/: mod.rs
src/repositories/: matchmaking_repository.rs  mod.rs  user_repository.rs
src/routes/: auth.rs  health.rs  matchmaking.rs
src/services/: auth_service.rs  matchmaking_service.rs  mod.rs  user_service.rs
src/services/errors/: mod.rs  user_service_errors.rs
tests/: .env.example  Cargo.toml  auth_flow_test.rs  config.rs  e2e_tests.rs  health_check_test.rs  integration_tests.rs  lib.rs  main.rs  matchmaking_test.rs  mod.rs  test_utils.rs  test_websocket_manual.rs  unit_tests.rs
tests/common/: api_helpers.rs  mod.rs  models.rs  utils.rs
tests/e2e/: cognito_auth.rs  health_e2e.rs  mod.rs
tests/e2e_tests_internal/: mod.rs  utils.rs
tests/e2e_tests_internal/client/: mod.rs
tests/e2e_tests_internal/config/: mod.rs
tests/e2e_tests_internal/scenarios/: mod.rs
tests/e2e_tests_internal/scenarios/authentication/: mod.rs
tests/e2e_tests_internal/scenarios/game/: mod.rs
tests/e2e_tests_internal/scenarios/queue/: mod.rs
tests/e2e_tests_internal/scenarios/websocket/: mod.rs
