[workspace]
members = [
    "packages/api",
    "packages/stream-processor",
    "packages/shared"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Killian O'Dalaigh <killian@example.com>"]
license = "MIT"

[workspace.dependencies]
aws-config = { version = "1.8.2", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.84.0"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
