[workspace]
members = [
    "packages/api",
    "packages/game-session-notifier",
    "packages/queue-processor",
    "packages/shared",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Killian O'Dalaigh <killian@example.com>"]
license = "MIT"

[workspace.dependencies]
aws-config = { version = "1.8.2", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.84.0"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
lambda_runtime = "0.8.1"
axum = { version = "0.7", features = ["macros"] }
lambda-web = "0.2.1"
jsonwebtoken = "9.3.1"
rand = "0.8.5"
serde_json = "1.0.219"
