[workspace]
resolver = "2"
members = [
  "crates/api",
  "crates/create_user",
  "crates/matchmaker",
  "crates/shared",
  "crates/websocket_api",
  "crates/websocket_authorizer",
  "tests"
]

[workspace.package]
version = "0.1.0"
authors = ["Checkmate Team"]
edition = "2021"

[workspace.dependencies]
# HTTP & Web
axum = { version = "0.7", default-features = false, features = [
  "http1",
  "http2",
  "json",
  "tokio"
] }
http = "1.0"
lambda_http = "0.10"
# Lambda runtime
lambda_runtime = "0.10"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Async runtime
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", default-features = false }
tower-http = { version = "0.5", default-features = false, features = [
  "cors",
  "trace"
] }
# Logging & observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
