[package]
name = "checkmate-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.47.1", features = ["full", "rt-multi-thread", "macros"] }
reqwest = { version = "0.11.27", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
rand = "0.8.5"
chrono = { version = "0.4.41", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
mockall = "0.12.1"
proptest = "1.4.0"
test-case = "3.3.1"
rstest = "0.19.0"
anyhow = "1.0.86"
wiremock = "0.6.5"
assert_cmd = "2.0.14"
predicates = "3.1.0"
tempfile = "3.10.1"
axum-test = "18.1.0"
colored = "2.1.0"
clap = { version = "4.4.18", features = ["derive"] }
futures = "0.3.30"
criterion = { version = "0.5.1", features = ["html_reports"] }
async-trait = "0.1.88"
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
tungstenite = "0.20.1"

# Dependencies from the main workspace
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1"
axum = { version = "0.7", features = ["macros"] }
lambda_runtime = "0.8"
lambda-web = "0.2"
jsonwebtoken = "9"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }

# Local workspace dependencies
api = { path = "../packages/api" }
shared = { path = "../packages/shared" }
game-session-notifier = { path = "../packages/game-session-notifier" }
queue-processor = { path = "../packages/queue-processor" }
websocket-api = { path = "../packages/websocket-api" }

[[bin]]
name = "test-runner"
path = "main.rs"

[[test]]
name = "unit_tests"
path = "unit_tests.rs"

[[test]]
name = "integration_tests"
path = "integration_tests.rs"

[[test]]
name = "e2e_tests"
path = "e2e_tests.rs"

[[bench]]
name = "benchmarks"
path = "benchmarks.rs"
harness = false

[[bin]]
name = "test_websocket_manual"
path = "test_websocket_manual.rs"
