[package]
name = "checkmate-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.47.1", features = ["full", "rt-multi-thread", "macros"] }
reqwest = { version = "0.11.27", features = ["json"] }
serde_json = "1.0"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
futures = "0.3.30"
chrono = { version = "0.4.41", features = ["serde"] }
async-trait = "0.1.88"
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }

# Dependencies from the main workspace
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1"
axum = { version = "0.7", features = ["macros"] }
lambda_runtime = "0.8"
lambda-web = "0.2"
jsonwebtoken = "9"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }

# Local workspace dependencies
shared = { path = "../packages/shared" }

[[test]]
name = "e2e_tests"
path = "e2e_tests.rs"
