[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[[test]]
name = "e2e"
path = "mod.rs"

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Testing utilities
anyhow = "1.0"
