[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[[test]]
name = "e2e"
path = "mod.rs"

[dependencies]
# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# AWS SDK
aws-config = "1.1"
aws-sdk-cognitoidentityprovider = "1.13"
aws-sdk-dynamodb = "1.96"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
base64 = "0.21"

# Testing utilities
anyhow = "1.0"
dotenv = "0.15"

# WebSocket client
tokio-tungstenite = { version = "0.20", features = ["rustls", "rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Random number generation
rand = "0.8"

# URL parsing
url = "2"

# Test serialization
serial_test = "3.0"

# HTTP request building
http = "0.2"

# Shared models
shared = { path = "../crates/shared" }
