[package]
name = "api"
version = "0.1.0"
edition = "2021"

[lib]
name = "api"
path = "src/lib.rs"

[[bin]]
name = "api-bootstrap"
path = "src/main.rs"

[dependencies]
# Lambda runtime
lambda_runtime = "0.10"
lambda_http = "0.10"

# HTTP & Web
axum = { version = "0.7", default-features = false, features = ["tokio", "http1", "http2", "json"] }
tower = { version = "0.4", default-features = false }
tower-http = { version = "0.5", default-features = false, features = ["trace", "cors"] }
http = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9"
base64 = "0.21"

# Logging & observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
# Testing utilities

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
