[package]
name = "create_user"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "create-user"
path = "src/main.rs"

[dependencies]
# Lambda runtime
lambda_runtime = "0.10"

# Async runtime
tokio = { version = "1", features = ["full"] }
# OnceCell for lazy initialization
once_cell = "1.18"
lazy_static = "1.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# AWS SDK
aws-config = "1.1"
aws-sdk-dynamodb = "1.1"
aws_lambda_events = "0.15"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }

# Shared models
shared = { path = "../shared" }

# Logging & observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
