[package]
name = "websocket_api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "websocket-handler"
path = "src/main.rs"

[dependencies]
# Lambda runtime
lambda_runtime = "0.10"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# AWS SDK
aws-config = "1.1"
aws-sdk-dynamodb = "1.1"
aws-sdk-apigatewaymanagement = "1.1"
aws_lambda_events = "0.15"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }

# Shared models
shared = { path = "../shared" }

# Logging & observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
