[package]
name = "websocket-authorizer"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
aws_lambda_events = "0.15"
jsonwebtoken = "9.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.21"
chrono = "0.4"

shared = { path = "../shared" }
